<resources>
    <string name="app_name">BigHealth</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment1</string>

    <!-- Strings related to login -->
    <string name="prompt_email">手机号/邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="forget_password">忘记密码？</string>

    <string name="action_sign_in">登  录</string>
    <string name="action_sign_in_color">#ffffff</string>

    <string name="action_log_out">退  出</string>

    <string name="action_register">新用户注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">请输入正确的手机号</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_null_password">密码不能为空</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">请输入账号</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_lost_password">LostPasswordActivity</string>
    <string name="phone_number">请输入手机号：</string>
    <string name="verification">请输入验证码：</string>
    <string name="btn_verification">获取验证码</string>
    <string name="new_password">设置新密码：</string>

    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开加载更多</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="title_activity_activity_test">ActivityTest</string>

    <string name="guide_viewpager_btn_go_text">立即进入</string>
</resources>
