<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f0f0f0"
    android:scrollbars="none" >
    <include
        layout="@layout/footer_tab_1"
        android:id="@+id/include2"></include>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dip"
        android:paddingRight="10dip"
        android:paddingLeft="10dip"
        android:layout_below="@+id/include2">

        <!-- 手机号码 -->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/phone_number"
                android:textSize="17sp"
                android:id="@+id/textView4" />

            <EditText
                android:id="@+id/phone_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="number"
                android:maxLength="11"
                android:text=""
                android:singleLine="true"
                android:textSize="17sp"
                android:layout_toEndOf="@+id/textView4" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#b3b3b3"
            ></View>
        <!-- 验证码 -->

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/verification"
                android:textSize="17sp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/btn_verification"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:padding="5dp"
                android:textColor="#ffff"
                android:text="@string/btn_verification"
                android:background="@drawable/biankuang_yuan_blue"
               />

            <EditText
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:id="@+id/et1"
                android:inputType="number"
                android:maxLength="6"
                android:text=""
                android:singleLine="true"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/textView1" />

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#b3b3b3"
            ></View>

        <!-- 新密码 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/new_password"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/new_password_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="textPassword"
                android:maxLength="12"
                android:singleLine="true"
                android:textSize="17sp" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#b3b3b3"
            ></View>
    </LinearLayout>

    <TextView
        android:id="@+id/new_register_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:clickable="true"
        android:gravity="center"
        android:text="完成"
        android:textColor="#ffffff"
        android:background="@drawable/yuanjiao"
        android:textSize="20sp"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="98dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="显示密码"
        android:layout_marginTop="10dp"
        android:id="@+id/checkBox"
        android:layout_below="@+id/linearLayout1"
        android:layout_alignStart="@+id/new_register_btn" />

</RelativeLayout>